--- a/TP2/stock_prediction_forecast_horizon.ipynb
+++ b/TP2/stock_prediction_forecast_horizon.ipynb
@@ -4897,7 +4897,10 @@
    "cell_type": "code",
    "execution_count": 125,
    "id": "9598ee4d-2082-4451-ab07-059f4f416806",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
