--- a/TP2/stock_prediction_multi_horizon.ipynb
+++ b/TP2/stock_prediction_multi_horizon.ipynb
@@ -370,7 +370,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "2d52d08a-5aa1-4cd1-b8d9-3e33c31b73bd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -486,6 +489,7 @@
    "execution_count": 46,
    "id": "00d6b2bc-72fa-4edd-9b32-2ad15aa16f3c",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -4284,6 +4288,7 @@
    "execution_count": 50,
    "id": "b668cda0-3c91-4dea-9a7a-eda0a397fb4d",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
