--- a/TP2/LSTM_multiclass_text_classification.ipynb
+++ b/TP2/LSTM_multiclass_text_classification.ipynb
@@ -106,32 +106,32 @@
      "output_type": "stream",
      "text": [
       "torch.Size([3, 8, 7])\n",
-      "tensor([[[ 1.6428,  0.9785,  1.7720, -1.5269, -0.2567, -1.0452, -0.1697],\n",
-      "         [-1.0332,  0.2064, -0.3877,  1.0381,  0.0037, -0.1067, -1.2185],\n",
-      "         [ 0.7420,  0.1918,  0.1814,  1.3377,  0.9188, -2.3824,  0.8264],\n",
-      "         [-0.9326, -0.8175, -0.4355,  0.2890, -0.0242, -0.3886, -0.4175],\n",
-      "         [ 2.3079, -0.1219,  0.1844,  0.5896,  1.8824,  1.8669,  0.6179],\n",
-      "         [-1.1540, -0.8276, -0.5489,  0.3758, -0.3906,  0.2961, -0.4956],\n",
-      "         [-2.5189, -0.3381,  0.8846,  0.4797,  1.1059,  0.0696, -0.5726],\n",
-      "         [ 0.3120, -0.3363,  1.1756,  1.2869,  1.2991,  0.8712,  1.4680]],\n",
+      "tensor([[[-0.0211,  0.6980, -1.0065,  0.3734,  0.7484,  0.6472,  0.4732],\n",
+      "         [-0.7464, -0.0925,  1.0838,  3.3068, -0.8195, -0.8103,  1.1408],\n",
+      "         [-2.8113,  0.6178, -1.7236, -0.4541,  1.8935, -1.8545, -0.1657],\n",
+      "         [-0.0488, -1.1439, -1.1919,  0.5877,  2.6043,  0.5590,  2.1350],\n",
+      "         [ 0.3997,  2.0650,  1.3771, -1.0435, -2.2938,  0.4862, -0.9274],\n",
+      "         [-0.4790, -1.0049,  0.1868, -0.6904,  0.4675,  1.2820,  0.7470],\n",
+      "         [ 0.2138,  0.5629, -0.5667, -0.1276,  1.0429,  0.1179, -1.4482],\n",
+      "         [ 0.8033,  0.4227, -1.0868,  0.7922, -0.3432,  0.0278,  2.1815]],\n",
       "\n",
-      "        [[ 0.7420,  0.1918,  0.1814,  1.3377,  0.9188, -2.3824,  0.8264],\n",
-      "         [ 0.3810,  0.8043,  1.1316,  0.8638,  0.8281,  0.1789, -0.1305],\n",
-      "         [-0.3517,  0.6678, -1.2133,  0.4566, -0.7159, -0.5601,  0.4743],\n",
-      "         [-1.4685, -0.5046, -0.0135, -2.1217,  0.3752,  1.4805, -1.3744],\n",
-      "         [ 0.1670, -1.2739,  1.7767,  0.2269, -0.5536,  0.4178,  0.1350],\n",
-      "         [-0.7501, -1.0720, -0.0664,  0.0995, -0.9210, -1.4413,  0.2314],\n",
-      "         [ 1.4394,  0.2773, -0.6908,  1.8300,  1.7862,  0.2548,  2.0528],\n",
-      "         [ 0.5496, -0.4109, -0.0095,  0.6849,  0.5672, -0.9079,  1.0389]],\n",
+      "        [[-2.8113,  0.6178, -1.7236, -0.4541,  1.8935, -1.8545, -0.1657],\n",
+      "         [ 0.7834, -0.9732,  0.6553,  1.3834, -0.4028, -0.1530, -0.3427],\n",
+      "         [-0.0928,  0.0655,  0.5118,  1.5384, -0.1981,  0.9967,  0.0565],\n",
+      "         [-0.6253, -1.2485, -0.2512, -2.4114, -0.7757, -1.9105,  0.6357],\n",
+      "         [-1.0527, -0.2680,  0.4068, -1.2451, -2.2937,  0.5507, -0.5505],\n",
+      "         [ 1.1595,  1.6400, -0.2550, -1.0465, -0.0559, -2.4054,  0.1065],\n",
+      "         [ 0.3016, -1.3423,  1.1252, -0.6639,  0.2296,  1.6968,  0.6607],\n",
+      "         [-1.2519, -0.6996,  0.3854,  0.3649, -1.0798,  1.3481, -0.2734]],\n",
       "\n",
-      "        [[-0.5116,  0.1562,  0.6331, -0.8785,  0.5490,  0.7458, -0.0087],\n",
-      "         [ 0.8080,  0.6561,  0.1145, -1.2508,  0.0771,  1.5468,  0.5857],\n",
-      "         [ 0.1670, -1.2739,  1.7767,  0.2269, -0.5536,  0.4178,  0.1350],\n",
-      "         [-0.3517,  0.6678, -1.2133,  0.4566, -0.7159, -0.5601,  0.4743],\n",
-      "         [ 0.7420,  0.1918,  0.1814,  1.3377,  0.9188, -2.3824,  0.8264],\n",
-      "         [ 2.3079, -0.1219,  0.1844,  0.5896,  1.8824,  1.8669,  0.6179],\n",
-      "         [-0.6447, -0.1076,  0.4913, -0.7878,  1.9310, -0.7363,  0.6674],\n",
-      "         [-0.1113, -3.1665, -0.7555,  0.7991, -0.1493, -0.2019, -1.9713]]],\n",
+      "        [[ 0.8129, -0.8383, -0.8839, -0.0143, -0.1142, -1.0577,  0.1009],\n",
+      "         [-0.0463,  0.5967, -0.0848, -0.7370,  0.5762,  0.1032,  0.7161],\n",
+      "         [-1.0527, -0.2680,  0.4068, -1.2451, -2.2937,  0.5507, -0.5505],\n",
+      "         [-0.0928,  0.0655,  0.5118,  1.5384, -0.1981,  0.9967,  0.0565],\n",
+      "         [-2.8113,  0.6178, -1.7236, -0.4541,  1.8935, -1.8545, -0.1657],\n",
+      "         [ 0.3997,  2.0650,  1.3771, -1.0435, -2.2938,  0.4862, -0.9274],\n",
+      "         [-0.3455,  1.3480,  0.5819,  1.4872, -0.3860,  0.2577,  1.4489],\n",
+      "         [-1.9318, -0.0304,  0.0898, -0.4226, -2.3080, -2.5324, -0.9259]]],\n",
       "       grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
@@ -150,9 +150,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 0.5869,  0.0371, -0.0829],\n",
-      "         [ 0.3223,  0.0327,  0.0744],\n",
-      "         [ 0.2332, -0.2742,  0.1377]]], grad_fn=<StackBackward0>)\n"
+      "tensor([[[ 0.0207,  0.0665,  0.0116],\n",
+      "         [ 0.0219, -0.2339, -0.1767],\n",
+      "         [ 0.0714, -0.2268, -0.1186]]], grad_fn=<StackBackward0>)\n"
      ]
     }
    ],
@@ -187,32 +187,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 0.0918, -0.0555, -0.1362],\n",
-      "         [-0.0661,  0.0621, -0.3610],\n",
-      "         [-0.1333,  0.2466, -0.0648],\n",
-      "         [-0.1168, -0.0480, -0.0539],\n",
-      "         [-0.1054, -0.0061, -0.1814],\n",
-      "         [-0.1308, -0.1015, -0.1575],\n",
-      "         [-0.0313, -0.0500, -0.1277],\n",
-      "         [-0.1958, -0.2205, -0.2259]],\n",
+      "tensor([[[ 0.0867,  0.2604, -0.1957],\n",
+      "         [ 0.2254,  0.1940, -0.1049],\n",
+      "         [ 0.1264,  0.0201, -0.0348],\n",
+      "         [ 0.3501, -0.0200, -0.1240],\n",
+      "         [ 0.3662,  0.3937, -0.0468],\n",
+      "         [ 0.1394,  0.2377, -0.0822],\n",
+      "         [ 0.2034,  0.1761, -0.0846],\n",
+      "         [-0.0209,  0.2346, -0.1395]],\n",
       "\n",
-      "        [[-0.0583,  0.2173, -0.0201],\n",
-      "         [-0.3833,  0.0724,  0.2678],\n",
-      "         [-0.2094,  0.0745,  0.1155],\n",
-      "         [-0.1336,  0.1455, -0.1756],\n",
-      "         [-0.0890,  0.0169, -0.0720],\n",
-      "         [-0.1243,  0.0361, -0.4070],\n",
-      "         [-0.1830, -0.0356, -0.1044],\n",
-      "         [-0.1998, -0.0063,  0.0237]],\n",
+      "        [[ 0.0408, -0.0386, -0.0282],\n",
+      "         [ 0.1517,  0.4426,  0.0172],\n",
+      "         [-0.0321,  0.2695, -0.0396],\n",
+      "         [ 0.1657,  0.2277, -0.0379],\n",
+      "         [-0.2820,  0.0722, -0.0700],\n",
+      "         [-0.2464,  0.2224, -0.2043],\n",
+      "         [-0.3699,  0.3575, -0.3631],\n",
+      "         [-0.0346,  0.2637, -0.1777]],\n",
       "\n",
-      "        [[ 0.1097, -0.0619, -0.0310],\n",
-      "         [-0.0715, -0.2041, -0.0230],\n",
-      "         [-0.0722, -0.1792, -0.0845],\n",
-      "         [-0.1808,  0.0559, -0.1601],\n",
-      "         [-0.2029,  0.2857, -0.0532],\n",
-      "         [-0.1113,  0.2510, -0.1101],\n",
-      "         [-0.2394, -0.0517,  0.0154],\n",
-      "         [-0.1504,  0.1082, -0.0475]]], grad_fn=<TransposeBackward0>)\n"
+      "        [[ 0.0268,  0.1114, -0.1181],\n",
+      "         [-0.3670, -0.0780, -0.1482],\n",
+      "         [-0.5254, -0.0741, -0.1591],\n",
+      "         [-0.3387,  0.1257, -0.2382],\n",
+      "         [-0.0915, -0.0314, -0.0574],\n",
+      "         [ 0.1199,  0.3964,  0.0054],\n",
+      "         [ 0.1687,  0.3513, -0.0880],\n",
+      "         [ 0.1178,  0.3700, -0.1580]]], grad_fn=<TransposeBackward0>)\n"
      ]
     }
    ],
@@ -701,7 +701,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_30624\\2008228755.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_7116\\2008228755.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -801,7 +801,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_30624\\2365825949.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_7116\\2365825949.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1052,16 +1052,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_30624\\3512281136.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_7116\\552205868.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  reviews['encoded'] = reviews['review'].apply(lambda x: np.array(encode_sentence(x,vocab2index )))\n",
-      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_30624\\3512281136.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Jose\\AppData\\Local\\Temp\\ipykernel_7116\\552205868.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1071,95 +1071,22 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>review</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>review_length</th>\n",
-       "      <th>encoded</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Absolutely wonderful - silky and sexy and com...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>[[2, 3, 4, 5, 6, 7, 8, 7, 9, 0, 0, 0, 0, 0, 0,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Love this dress!  it's sooo pretty.  i happen...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>62</td>\n",
-       "      <td>[[2, 10, 11, 12, 5, 13, 14, 15, 16, 5, 17, 18,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Some major design flaws I had such high hopes ...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>102</td>\n",
-       "      <td>[[54, 55, 56, 57, 17, 58, 59, 60, 61, 62, 11, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>My favorite buy! I love, love, love this jumps...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>25</td>\n",
-       "      <td>[[68, 109, 110, 2, 17, 10, 2, 10, 2, 10, 11, 1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Flattering shirt This shirt is very flattering...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>38</td>\n",
-       "      <td>[[122, 123, 11, 123, 52, 92, 122, 19, 124, 125...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                              review  rating  review_length  \\\n",
-       "0   Absolutely wonderful - silky and sexy and com...       3              8   \n",
-       "1   Love this dress!  it's sooo pretty.  i happen...       4             62   \n",
-       "2  Some major design flaws I had such high hopes ...       2            102   \n",
-       "3  My favorite buy! I love, love, love this jumps...       4             25   \n",
-       "4  Flattering shirt This shirt is very flattering...       4             38   \n",
-       "\n",
-       "                                             encoded  \n",
-       "0  [[2, 3, 4, 5, 6, 7, 8, 7, 9, 0, 0, 0, 0, 0, 0,...  \n",
-       "1  [[2, 10, 11, 12, 5, 13, 14, 15, 16, 5, 17, 18,...  \n",
-       "2  [[54, 55, 56, 57, 17, 58, 59, 60, 61, 62, 11, ...  \n",
-       "3  [[68, 109, 110, 2, 17, 10, 2, 10, 2, 10, 11, 1...  \n",
-       "4  [[122, 123, 11, 123, 52, 92, 122, 19, 124, 125...  "
+       "array([array([2, 3, 4, 5, 6, 7, 8, 7, 9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "              0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "              0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "              0, 0, 0, 0])                                                     ,\n",
+       "       9], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reviews['encoded'] = reviews['review'].apply(lambda x: np.array(encode_sentence(x,vocab2index )))\n",
-    "reviews.head()"
+    "reviews['encoded'][0]"
    ]
   },
   {
@@ -1185,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
